[package]
name = "buffer-unordered-weighted"
version = "0.1.1"
description = "Stream::buffer_unordered where each future can have a different weight."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
resolver = "2"
rust-version = "1.56"
categories = ["asynchronous"]
keywords = ["stream", "futures", "async", "buffer_unordered"]

[dependencies]
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
pin-project-lite = "0.2.9"

[dev-dependencies]
futures = "0.3.25"
proptest = "1.0.0"
proptest-derive = "0.3.0"
tokio = { version = "1.21.2", features = ["macros", "sync", "test-util", "time"] }
