[package]
name = "future-queue"
version = "0.1.2"
description = "Adapters to manage a queue of futures, where each future can have a different weight."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nextest-rs/future-queue"
resolver = "2"
rust-version = "1.56"
categories = ["asynchronous"]
keywords = ["stream", "futures", "async", "buffer_unordered"]

[dependencies]
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
pin-project-lite = "0.2.9"

[dev-dependencies]
futures = "0.3.25"
proptest = { version = "1.0.0", features = ["timeout"] }
proptest-derive = "0.3.0"
tokio = { version = "1.21.2", features = ["macros", "sync", "test-util", "time"] }
tokio-stream = { version = "0.1.11" }
